router-bridge/src/snapshots/router_bridge__planner__tests__generate_query_fragments_defaults_to_false.snap
---
source: router-bridge/src/planner.rs
assertion_line: 1003
expression: "serde_json::to_string_pretty(&payload.data).unwrap()"
---
{
  "queryPlan": {
    "kind": "QueryPlan",
    "node": {
      "kind": "Fetch",
      "serviceName": "Subgraph1",
      "variableUsages": [],
      "operation": "{t{__typename ...on A{x y t{__typename ...on A{x y}...on B{z}}}}}",
      "operationKind": "query"
    }
  },
  "formattedQueryPlan": "QueryPlan {\n  Fetch(service: \"Subgraph1\") {\n    {\n      t {\n        __typename\n        ... on A {\n          x\n          y\n          t {\n            __typename\n            ... on A {\n              x\n              y\n            }\n            ... on B {\n              z\n            }\n          }\n        }\n      }\n    }\n  },\n}",
  "evaluatedPlanCount": 1
}
