router-bridge/src/snapshots/router_bridge__planner__tests__named_query_with_several_choices_works.snap
---
source: router-bridge/src/planner.rs
expression: "serde_json::to_string_pretty(&payload.data).unwrap()"
---
{
  "queryPlan": {
    "kind": "QueryPlan",
    "node": {
      "kind": "Fetch",
      "serviceName": "accounts",
      "variableUsages": [],
      "operation": "query MyFirstName__accounts__0{me{name{first}}}",
      "operationKind": "query",
      "operationName": "MyFirstName__accounts__0"
    }
  },
  "formattedQueryPlan": "QueryPlan {\n  Fetch(service: \"accounts\") {\n    {\n      me {\n        name {\n          first\n        }\n      }\n    }\n  },\n}",
  "evaluatedPlanCount": 1
}
